# luafilesystem

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.win  README  README.md  appveyor.yml  config  config.win  examples.html  index.html  license.html  luafilesystem-scm-1.rockspec  luafilesystem.c  luafilesystem.def  luafilesystem.h  manual.html  t_lfs.lua  t_luafilesystem.lua  teste.lua
.github/workflows/: ci.yml
.travis/: setup_lua.sh
doc/us/: doc.css  examples.html  index.html  license.html  manual.html
docs/: index.html  license.html
rockspecs/: luafilesystem-1.4.0-1.rockspec  luafilesystem-1.4.1-1.rockspec  luafilesystem-1.4.2-1.rockspec  luafilesystem-1.7.0-1.rockspec  luafilesystem-1.7.0-2.rockspec  luafilesystem-cvs-1.rockspec  luafilesystem-cvs-2.rockspec
src/: lfs.c  lfs.def  lfs.h
tests/: test.lua
vc6/: lfs.def  luafilesystem_dll.dsp
